# legacy-to-agentic-ready

./: .commitlintrc.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  agent-context.json  mcp.json  plan.md  pyproject.toml  requirements.txt  spec.md  system_prompt.md
.github/: DRIFT_PR_TEMPLATE.md  PR_TEMPLATE.md
docs/: automation.md
examples/hello_world_source/: .cursorrules  AGENTIC_EVAL.md  AGENTS.md  CLAUDE.md  Makefile  README.md  agent-context.json  app.py  cost_report.json  mcp.json  openapi.yaml  pyproject.toml  requirements.txt  system_prompt.md
examples/hello_world_source/.agent-ready/: custom_questions.json
examples/hello_world_source/.github/: CODEOWNERS  copilot-instructions.md
examples/hello_world_source/.github/workflows/: ci.yml
examples/hello_world_source/hooks/: post-test.md  pre-tool-call.md  session-start.md
examples/hello_world_source/memory/: schema.md
examples/hello_world_source/skills/: add-dependency.md  build.md  run-ci.md  run-tests.md
examples/hello_world_source/tests/: test_app.py
memory/: schema.md
prompts/: agent-ready-universal.md
scripts/: pre-commit-snippet.sh  run_transformer.py
templates/: AGENTS.template.md  CLAUDE.template.md  ToolResult.java  agent-context.template.json  gemini_agent.template.yaml  install-workflow.yml  openai_agent.template.py  system_prompt.template.md  tool.go.template.go  tool.python.template.py  tool.typescript.template.ts
tests/: test_analyser.py  test_cli.py  test_evaluator.py  test_generator.py  test_golden_eval.py  test_mcp_server.py
(+56 files in other folders)
