[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hello_world"
version = "0.1.0"
description = "Minimal Flask REST API — AgentReady hello_world example"
requires-python = ">=3.11"
dependencies = ["flask>=2.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
